--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tour-mallorca",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Full stack project centered around creating a mock travel agency webpage",
   "main": "app.js",
   "scripts": {
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Christopher-Liu/Tour-Mallorca-Webpage#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "mongoose": "^4.11.4"
   }
