Adding a 'start' property to package.json to get deployment on Heroku working correctly

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Full stack project centered around creating a mock travel agency webpage",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
